<resources>
    <string name="app_name">VerificaAudisio</string>
    <string name="txtNome">Nome</string>
    <string name="txtCognome">Cognome</string>
    <string name="rdgSesso">sesso</string>
    <string name="rdbMaschio">Maschio</string>
    <string name="rdbFemmina">femmina</string>
    <string name="rdgPatente">patente</string>
    <string name="rdbPatenteSi">Si</string>
    <string name="rdbPatenteNo">No</string>
    <string name="chkTennis">Tennis</string>
    <string name="chkCalcio">Calcio</string>
    <string name="chkBasket">Basket</string>
    <string name="btnOK">Visualizza</string>
</resources>
