<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nome"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="27dp" />

    <EditText
        android:id="@+id/txtNome"
        android:layout_width="146dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtNome"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="46dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cognome"
        tools:layout_editor_absoluteX="183dp"
        tools:layout_editor_absoluteY="27dp" />

    <EditText
        android:id="@+id/txtCognome"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtCognome"
        tools:layout_editor_absoluteX="183dp"
        tools:layout_editor_absoluteY="46dp" />

    <RadioGroup
        android:id="@+id/Sesso"
        android:layout_width="122dp"
        android:layout_height="66dp"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="162dp">

        <RadioButton
            android:id="@+id/rdbMaschio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rdbMaschio" />

        <RadioButton
            android:id="@+id/rdbFemmina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rdbFemmina" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sesso"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="142dp" />

    <RadioGroup
        android:id="@+id/rdgPatente"
        android:layout_width="74dp"
        android:layout_height="64dp"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="161dp">

        <RadioButton
            android:id="@+id/rdbPatenteSi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Si" />

        <RadioButton
            android:id="@+id/tdnPatenteNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="No" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Patente"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="141dp" />

    <CheckBox
        android:id="@+id/chkTennis"
        android:layout_width="89dp"
        android:layout_height="34dp"
        android:text="@string/chkTennis"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="267dp" />

    <CheckBox
        android:id="@+id/chkCalcio"
        android:layout_width="86dp"
        android:layout_height="33dp"
        android:text="@string/chkCalcio"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="299dp" />

    <CheckBox
        android:id="@+id/chkBasket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chkBasket"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="332dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hobby"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="246dp" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Visualizza"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="407dp" />

</android.support.constraint.ConstraintLayout>